vision section fixed

--- a/style.css
+++ b/style.css
@@ -144,10 +144,13 @@ body{
     padding: 32px;
     border-radius: 16px;
     justify-content: space-between;
-    align-items: flex-start;
     flex: 1;
 }
+.card-content{
+    align-items: flex-start;
+}
 .card .card-title{
+    margin-top: 25px;
     margin-bottom: 15px;
 }
 
