--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ body{
     padding: 32px;
     border-radius: 16px;
     justify-content: space-between;
+    align-items: flex-start;
     flex: 1;
 }
 .card-content{
@@ -156,10 +157,37 @@ body{
 
 .card-1{
     background-color: #5691f533;
+    border: 1px solid #5490F5;
 }
 .card-2{
-    background-color: #5691f533;
+    background-color: #C6E4D6;
+    border: 1px solid #09A15C;
 }
 .card-3{
-    background-color: #5691f533;
+    background-color: #F7EBCF;
+    border: 1px solid #FFC239;
+}
+.card-btn{
+    color: #ffffff;
+    text-decoration: none;
+    padding: 11px 20px;
+    border-radius: 8px;
+    transition: all .5s ease-in-out;
+}
+.card-btn-1{
+    background-color: #5490F5;
+    border: 1px solid #5490F5;
+}
+.card-btn-2{
+    background-color: #09A15C;
+    border: 1px solid #09A15C;
+}
+.card-btn-3{
+    background-color: #FFC239;
+    border: 1px solid #FFC239;
+}
+.card-btn:hover{
+    background-color: transparent;
+    color: #0E0E0E;
+    cursor: pointer;
 }
