--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     font-family: "Fira Sans", serif;
     background-color: #F5F5F5;
     height: 1000px;
+    color: #0E0E0E;
 }
 
 /* Global Styles */
@@ -41,7 +42,11 @@ body{
 .flex-align-start{
     align-items: flex-start;
 }
-.flex-gap{
+
+.flex-gap-12{
+    gap: 12px;
+}
+.flex-gap-24{
     gap: 24px;
 }
 
@@ -210,4 +215,28 @@ body{
 }
 .author-title{
     color: #0d0d0d99;
+}
+/* Recent News Styles */
+.recent-news-section{
+    margin: 80px 0;
+}
+.news-card-container{
+    margin-top: 32px;
+}
+article.news-card{
+    padding: 48px;
+    background-color: #ffffff;
+    border-radius: 24px;
+    border: 1px solid #0d0d0d1a;
+}
+article .featured-image{
+    width: 100%;
+    border-radius: 24px;
+}
+.news-container{
+    flex: 1;
+}
+.news-btn{
+    margin-top: 20px;
+    padding: 13px 26px;
 }
